syntax = "proto3";
option cc_enable_arenas = true;

package Yql.Analytics;
option java_package = "com.yandex.yql.analytics";
option java_outer_classname = "AnalyticsProtos";

import "kikimr/public/api/protos/ydb_operation.proto";
import "kikimr/public/api/protos/ydb_value.proto";

import "google/protobuf/timestamp.proto";

////////////////////////////////////////////////////////////

message YdbDatabase {
   string endpoint = 1;
   string database = 2;
}

message ClickHouseCluster {
   string cluster = 1;
   string host = 2;
   int32 port = 3;
   bool secure = 4;
   string login = 5;
   string password = 6;
}

message Connection {
    oneof connection {
        YdbDatabase ydb_database = 1;        
        ClickHouseCluster clickhouse_cluster = 2;
    }
}

message GetConnectionsRequest {
    string folder_id = 1;
    message Filter {
        string connection_id = 1;
    }
    Filter filter = 2;
}

message ConnectionEntity {
    string folder_id = 1;
    string connection_id = 2; // create new if connection_id is empty
    string created_by = 3;
    string modified_by = 4;
    string name = 5;
    Connection connection = 6;
    string acl = 7;
    google.protobuf.Timestamp creation_time = 8;
    google.protobuf.Timestamp modification_time = 9;
    bool is_deleted = 10;
}

message GetConnectionsResponse {
    repeated ConnectionEntity entity = 1;
}

message ModifyConnectionsRequest {
    repeated ConnectionEntity connection = 1; 
}

message ModifyConnectionsResponse { }

enum EFieldType {
    NONE = 0;
    SQL = 1;
    QUERY_PLAN = 2;
}

message GetQueriesRequest {
    string folder_id = 1;
    string continuation_token = 2;
    int32 limit = 3;

    message Filter {
        string query_id = 1;
        // see EFieldType
        int32 field_type = 2;
    }
    Filter filter = 4;
}

message GetQueriesResponse {
    message QueryEntity {
        string id = 1;
        string sql = 2; // filled by point request if filed_type contains `SQL'
        string created_by = 3;
        string modified_by = 4;
        string name = 5;
        string folder_id = 6;
        string acl = 7;
        int64 rows_limit = 8;	
        int64 bytes_limit = 9;
        google.protobuf.Timestamp creation_time = 10;
        google.protobuf.Timestamp modification_time = 11;
    }

    repeated QueryEntity queries = 1;
    string continuation_token = 2;
}

message ModifyQueryRequest {
    string id = 1; // ro
    string folder_id = 2; // ro

    string sql = 4;
    string name = 5;
    string acl = 6;
    int64 rows_limit = 7;
    int64 bytes_limit = 8;

    bool is_deleted = 9;
}

message ModifyQueryResponse { }

message GetHistoryRequest {
    Ydb.Operations.OperationParams operation_params = 1;
    string folder_id = 2;
    string continuation_token = 3;

    message Filter {
        string query_id = 1;
        string history_id = 2;
        // see EFieldType
        int32 field_type = 3;
    }
    Filter filter = 4;
}

message QueryStatistics {
    bytes yson = 1;
}


enum EExecuteMode {
    MODE_UNSPECIFIED      = 0x0000;
    RUN                   = 0x0001;
    EXPLAIN               = 0x0002;
    VALIDATE              = 0x0003;
    PARSE                 = 0x0004;
}

enum EQueryStatus {
    UNSPECIFIED = 0;
    SAVED = 1;
    RUNNING = 2;
    FAILED = 3;
    FINISHED = 4;
}

message GetHistoryResponse {
    Ydb.Operations.Operation operation = 1; // GetHistoryResult
}

message GetHistoryResult {
    message HistoryEntity {
        string id = 1;
        string sql = 2; // filled by point request if field_type contains `SQL'
        string created_by = 3;
        string modified_by = 4;
        string name = 5;
        string folder_id = 6;
        string acl = 7;
        string query_plan = 8; // filled by point request if field_type contains `QUERY_PLAN'
        string query_id = 9;

        repeated bool truncated = 10;
        repeated int64 rows_count = 11;
        EQueryStatus status = 12; 
        EExecuteMode execute_mode = 13;

        int64 rows_limit = 14;
        int64 bytes_limit = 15;

        google.protobuf.Timestamp start_time = 16;
        google.protobuf.Timestamp finish_time = 17;
        google.protobuf.Timestamp expiration_deadline = 18;
        google.protobuf.Timestamp creation_time = 19;
        google.protobuf.Timestamp modification_time = 20;

        QueryStatistics statistics = 21;
    }

    repeated HistoryEntity history = 1;
    string continuation_token = 2;
}

message ModifyHistoryRequest {
    string id = 1; // ro
    string folder_id = 2; // ro

    string name = 4;
    string acl = 5;
    bool is_deleted = 6;
}

message ModifyHistoryResponse { }

message ExecuteQueryRequest {
    Ydb.Operations.OperationParams operation_params = 1;
    string yql_text = 2;
    EExecuteMode execute_mode = 3;
    uint64 max_result_bytes = 4;
    uint64 max_result_rows = 5;
    uint32 expire_after_seconds = 6;
    // Map of query parameters (optional)
    map<string, Ydb.TypedValue> parameters = 7;
    repeated Connection connections = 8;
}

message ExecuteQueryResponse {
    Ydb.Operations.Operation operation = 1; // ExecuteQueryResult
}

message ExecuteQueryResult {
    string history_id = 1;
}

message GetResultDataRequest {
    Ydb.Operations.OperationParams operation_params = 1;
    string history_id = 2;
    int32 result_set_id = 3;
    int64 offset = 4;
    int64 limit = 5;
}

message GetResultDataResponse {
    Ydb.Operations.Operation operation = 1; // GetResultDataResult
}

message GetResultDataResult {
    Ydb.ResultSet result_set = 1;
}

message ResultSetHeader {
   repeated Ydb.Column column = 1;
   int64 rows_count = 2;
   bool truncated = 3;
}

message ResultSetHeaders {
   repeated ResultSetHeader header = 1;
}
